# Tab5-Meshtastic

./: .gitignore  CLAUDE.md  CMakeLists.txt  PRD.md  README.md  partitions.csv  sdkconfig.defaults
components/m5_tab5_component/: CMakeLists.txt  Kconfig  README.md  idf_component.yml
components/m5_tab5_component/include/: lvgl_port.h  lvgl_port_disp.h  lvgl_port_touch.h  m5_tab5_component.h  m5tab5_pinmap.h  m5tab5_rtc.h  m5tab5_tools.h  m5tab5_types.h  m5tab5_variant_ids.h
components/m5_tab5_component/src/: m5_tab5_component.cpp
components/m5_tab5_component/src/drivers/: m5tab5_builtin_drivers.cpp  m5tab5_builtin_drivers.h  m5tab5_driver_common.h  m5tab5_sys_i2c.cpp
components/m5_tab5_component/src/drivers/extio_pi4ioe5v6408/: m5tab5_extio_pi4ioe5v6408.cpp  m5tab5_extio_pi4ioe5v6408.h
components/m5_tab5_component/src/drivers/ina226/: m5tab5_ina226.cpp  m5tab5_ina226.h
components/m5_tab5_component/src/drivers/lcd_ili9881/: esp_lcd_ili9881c.c  esp_lcd_ili9881c.h  m5tab5_lcd_ili9881.cpp  m5tab5_lcd_ili9881.h
components/m5_tab5_component/src/drivers/lcd_st7121/: esp_lcd_st7121.c  esp_lcd_st7121.h  m5tab5_lcd_st7121.cpp  m5tab5_lcd_st7121.h
components/m5_tab5_component/src/drivers/lcd_st7123/: esp_lcd_st7123.c  esp_lcd_st7123.h  m5tab5_lcd_st7123.cpp  m5tab5_lcd_st7123.h
components/m5_tab5_component/src/drivers/rtc_rx8130/: m5tab5_rtc_rx8130.cpp  m5tab5_rtc_rx8130.h
components/m5_tab5_component/src/drivers/touch_gt911/: esp_lcd_touch_gt911.c  esp_lcd_touch_gt911.h  m5tab5_touch_gt911.cpp  m5tab5_touch_gt911.h
components/m5_tab5_component/src/drivers/touch_st7121/: esp_lcd_touch_st7121.c  esp_lcd_touch_st7121.h  m5tab5_touch_st7121.cpp  m5tab5_touch_st7121.h
components/m5_tab5_component/src/drivers/touch_st7123/: esp_lcd_touch_st7123.c  esp_lcd_touch_st7123.h  m5tab5_touch_st7123.cpp  m5tab5_touch_st7123.h
components/m5_tab5_component/src/lvgl_port/: lvgl_port.cpp  lvgl_port_disp.cpp  lvgl_port_touch.cpp
components/m5_tab5_component/src/tools/: m5tab5_tools_lvgl.cpp
components/m5_tab5_component/src/variants/: m5tab5_variant_autodetect.cpp  m5tab5_variant_reference.cpp  m5tab5_variant_registry.cpp  m5tab5_variant_registry.h
components/m5_tab5_keyboard_component/: CMakeLists.txt  idf_component.yml
components/m5_tab5_keyboard_component/src/: m5_tab5_keyboard.cpp  m5_tab5_keyboard.h  m5_tab5_keyboard_i2c_compat.h
components/meshtastic_protos/: CMakeLists.txt
components/meshtastic_protos/proto/meshtastic/: mesh.pb.h
main/: CMakeLists.txt  idf_component.yml  main.cpp
main/app/: app_state.cpp  app_state.h  settings.cpp  settings.h
main/ble/: ble_transport.cpp  ble_transport.h
main/board/: keyboard.cpp  keyboard.h  lcd_tools.cpp  lcd_tools.h
main/mesh/: mesh_proto.cpp  mesh_proto.h
main/ui/: theme.h  ui_shell.cpp  ui_shell.h
